--- a/src/components/LinkButton.astro
+++ b/src/components/LinkButton.astro
@@ -2,12 +2,10 @@
 const { href } = Astro.props;
 ---
 
-<a
-  href={href}
-  role="link"
-  target="_blank"
-  rel="noopener noreferrer"
-  class="inline-flex items-center justify-center gap-2 py-1 px-2 md:py-2 md:px-4 text-xs md:text-xs text-white transition font-size bg-gray-700 border border-gray-600 focus-visible:ring-yellow-500/80 text-md hover:bg-gray-600 hover:border-yellow-200 group max-w-fit rounded-xl hover:text-white focus:outline-none focus-visible:outline-none focus-visible:ring focus-visible:ring-white focus-visible:ring-offset-2 active:bg-black"
->
-  <slot />
+<a href={href} role="link" target="_blank" rel="noopener noreferrer">
+  <button
+    class="inline-flex h-12 animate-background-shine items-center justify-center rounded-full border border-gray-600 bg-[linear-gradient(110deg,#000103,45%,#1e2631,55%,#000103)] bg-[length:200%_100%] px-6 font-medium text-xs gap-x-2 text-white transition-colors focus:outline-none focus:ring-2 focus:ring-gray-400 focus:ring-offset-2 focus:ring-offset-gray-50"
+  >
+    <slot />
+  </button>
 </a>
