changing button gradient

--- a/src/components/LinkButton.astro
+++ b/src/components/LinkButton.astro
@@ -4,7 +4,7 @@ const { href } = Astro.props;
 
 <a href={href} role="link" target="_blank" rel="noopener noreferrer">
   <button
-    class="inline-flex h-12 animate-background-shine items-center justify-center rounded-full border border-gray-600 bg-[linear-gradient(110deg,#000103,45%,#1e2631,55%,#000103)] bg-[length:200%_100%] px-6 font-medium text-xs gap-x-2 text-white transition-colors focus:outline-none focus:ring-2 focus:ring-gray-400 focus:ring-offset-2 focus:ring-offset-gray-50"
+    class="inline-flex h-10 animate-background-shine items-center justify-center rounded-full border border-gray-600 bg-[linear-gradient(110deg,#8C6BCF,45%,#FFFFFF,55%,#8C6BCF)] bg-[length:200%_100%] px-6 font-medium text-xs gap-x-2 text-white transition-colors focus:outline-none focus:ring-2 focus:ring-gray-400 focus:ring-offset-2 focus:ring-offset-gray-50"
   >
     <slot />
   </button>
