--- a/src/components/SocialPill.astro
+++ b/src/components/SocialPill.astro
@@ -1,6 +1,6 @@
 <a {...Astro.props} target="_blank" rel="noopener noreferrer">
   <button
-    class="transition-background inline-flex h-10 items-center justify-center rounded-full border border-gray-800 bg-gradient-to-r from-gray-100 via-[#c7d2fe] to-[#8678f9] bg-[length:200%_200%] bg-[0%_0%] font-semibold text-gray-950 duration-500 hover:bg-[100%_200%] focus:outline-none focus:ring-2 focus:ring-gray-400 focus:ring-offset-2 focus:ring-offset-gray-50 gap-x-2 py-1 px-2 md:py-2 md:px-4 text-xs md:text-base"
+    class="transition-background inline-flex h-8 md:h-10 lg:h-12 items-center justify-center rounded-full border border-gray-800 bg-gradient-to-r from-gray-100 via-[#c7d2fe] to-[#8678f9] bg-[length:200%_200%] bg-[0%_0%] font-semibold text-gray-950 duration-500 hover:bg-[100%_200%] focus:outline-none focus:ring-2 focus:ring-gray-400 focus:ring-offset-2 focus:ring-offset-gray-50 gap-x-2 py-1 mb-2 px-2 md:py-2 md:px-4 text-xs md:text-base"
   >
     <slot />
   </button>
