--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,47 +1,47 @@
 ---
-import LinkedInIcon from '../components/icons/LinkedIn.astro'
-import GitHubIcon from '../components/icons/GitHub.astro'
+import LinkedInIcon from "../components/icons/LinkedIn.astro";
+import GitHubIcon from "../components/icons/GitHub.astro";
 
 const navItems = [
   {
-    title: 'Proyectos',
-    label: 'proyectos',
-    url: '/#proyectos'
+    title: "Proyectos",
+    label: "proyectos",
+    url: "/#proyectos",
   },
   {
-    title: 'Experiencia',
-    label: 'experiencia',
-    url: '/#experiencia'
+    title: "Experiencia",
+    label: "experiencia",
+    url: "/#experiencia",
   },
   {
-    title: 'Sobre mí',
-    label: 'sobre-mi',
-    url: '/#sobre-mi'
+    title: "Sobre mí",
+    label: "sobre-mi",
+    url: "/#sobre-mi",
   },
   {
-    title: 'Contacto',
-    label: 'contacto',
-    url: 'mailto:raul.garrigos91@gmail.com'
-  }
-]
+    title: "Contacto",
+    label: "contacto",
+    url: "mailto:raul.garrigos91@gmail.com",
+  },
+];
 ---
 
 <header
-  class='fixed top-0 z-10 bg-[#43229C] flex items-center justify-center w-full mx-auto p-1 md:p-2'
+  class="fixed top-0 z-10 bg-[#43229C] flex items-center justify-center w-full mx-auto p-1 md:p-2"
 >
   <nav
-    class='flex-grow flex px-3 text-xs md:text-lg font-medium rounded-full text-white justify-center items-center'
+    class="flex-grow flex px-3 text-xs md:text-base lg:text-xl font-medium rounded-full text-white justify-center items-center"
   >
     <h3
-      class='bg-gradient-to-r from-yellow-500 to-white text-transparent bg-clip-text font-black lg:text-3xl md:text-xl'
+      class="bg-gradient-to-r from-yellow-500 to-white text-transparent bg-clip-text font-black lg:text-3xl md:text-xl hidden md:block ml-10"
     >
       &lt;RGP /&gt;
     </h3>
-    <div class='flex items-center justify-center flex-grow md:-ml-10'>
+    <div class="flex items-center justify-center flex-grow md:-ml-10">
       {
         navItems.map((link) => (
           <a
-            class='relative block pr-2 md:px-3 py-2 transition hover:text-[#FFD700]'
+            class="relative block pr-2 md:px-3 py-2 transition hover:text-[#FFD700]"
             aria-label={link.label}
             href={link.url}
           >
@@ -50,22 +50,22 @@ const navItems = [
         ))
       }
     </div>
-    <div class='ml-auto flex items-center'>
+    <div class="mr-0 md:mr-10 flex items-center">
       <a
-        href='https://www.linkedin.com/in/raul-garrigos/'
-        target='_blank'
-        rel='noopener noreferrer'
-        class='mr-5 md:mr-3'
+        href="https://www.linkedin.com/in/raul-garrigos/"
+        target="_blank"
+        rel="noopener noreferrer"
+        class="mr-5 md:mr-3"
       >
-        <LinkedInIcon class='size-3 md:size-5' />
+        <LinkedInIcon class="size-3 md:size-5" />
       </a>
       <a
-        href='https://github.com/raulgarrigos'
-        target='_blank'
-        rel='noopener noreferrer'
-        class='md:mx-3'
+        href="https://github.com/raulgarrigos"
+        target="_blank"
+        rel="noopener noreferrer"
+        class="md:mx-3"
       >
-        <GitHubIcon class='size-3 md:size-5' />
+        <GitHubIcon class="size-3 md:size-5" />
       </a>
     </div>
   </nav>
