Added animation to logo

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -22,7 +22,11 @@ import SocialPill from "../components/SocialPill.astro";
     </a>
   </div>
   <div class="md:order-2">
-    <h2 class="text-xl sm:text-2xl text-yellow-100/80">FullStack Developer</h2>
+    <h2
+      class="inline-flex animate-text-gradient bg-gradient-to-r from-[#b2a8fd] via-[#8678f9] to-[#c7d2fe] bg-[200%_auto] bg-clip-text text-xl sm:text-2xl text-transparent"
+    >
+      FullStack Developer
+    </h2>
   </div>
   <div class="flex flex-row-reverse md:order-3">
     <img
@@ -31,7 +35,7 @@ import SocialPill from "../components/SocialPill.astro";
       alt={personalImageAlt}
     />
     <div class="">
-      <p class="mt-4 md:ml-0 text-sm pr-4 md:text-lg lg:text-2xl text-gray-400">
+      <p class="mt-4 md:ml-0 text-sm pr-4 md:text-lg lg:text-2xl text-gray-300">
         +7 años de experiencia como Content y Catalog Specialist. Un día decidí
         cambiar de rumbo y me embarqué en el Desarrollo Web. <span
           class="text-yellow-300/90"
