--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -33,7 +33,7 @@ const navItems = [
     class="flex-grow flex px-3 text-xs md:text-base lg:text-xl font-medium rounded-full text-white justify-center items-center"
   >
     <h3
-      class="bg-gradient-to-r from-yellow-500 to-white text-transparent bg-clip-text font-black lg:text-3xl md:text-xl hidden md:block ml-10"
+      class="md:inline-flex hidden animate-text-gradient bg-gradient-to-r from-yellow-300 via-yellow-400 to-yellow-100 bg-clip-text text-transparent bg-[200%_auto] font-black lg:text-3xl md:text-xl ml-10"
     >
       &lt;RGP /&gt;
     </h3>
